# secretiveX

./: .gitignore  AGENTS.md  APP_CONFIG.md  CLONE_CONTEXT.md  CLONE_FEATURES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  INCIDENTS.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  SECURITY.md
.github/: FUNDING.yml
.github/scripts/: install_pkcs11_deps.sh  signing.sh
.github/templates/: release.md
.github/workflows/: codeql.yml  nightly.yml  oneoff.yml  openssh-compat-smoke.yml  release.yml  rust-bench-smoke.yml  rust-fanout-1000-gate.yml  rust-lint.yml  rust-multi-host-stress.yml  rust-pkcs11-smoke.yml  rust-regression-gate.yml  rust-slo-gate.yml  rust-soak-gate.yml  shell-sanity.yml  test.yml  windows-agent-smoke.yml
Sources/Config/: Config.xcconfig
Sources/SecretAgent/: AppDelegate.swift  InternetAccessPolicy.plist  Notifier.swift  SecretAgent.entitlements  XPCInputParser.swift
Sources/SecretAgentInputParser/: SecretAgentInputParser.swift
Sources/Secretive/: App.swift  InternetAccessPolicy.plist
Sources/Secretive.xcodeproj/: project.pbxproj
Sources/Secretive/Controllers/: AgentStatusChecker.swift  JustUpdatedChecker.swift
Sources/Secretive/Views/Configuration/: IntegrationsView.swift  SetupView.swift
Sources/Secretive/Views/Views/: AboutView.swift  UpdateView.swift
Sources/SecretiveUpdater/: InternetAccessPolicy.plist  SecretiveUpdater.swift
crates/secretive-agent/: Cargo.toml
crates/secretive-agent/src/: main.rs
crates/secretive-bench/: Cargo.toml
crates/secretive-bench/src/: main.rs
crates/secretive-client/: Cargo.toml
crates/secretive-client/src/: main.rs
crates/secretive-core/: Cargo.toml
crates/secretive-core/src/: file_store.rs  lib.rs  pkcs11_store.rs  registry.rs  secure_enclave_store.rs  types.rs
crates/secretive-proto/: Cargo.toml
crates/secretive-proto/src/: codec.rs  lib.rs  message.rs
docs/: ARCHITECTURE.md  LINUX_SYSTEMD.md  OPENSSH_COMPAT.md  PRODUCT_FEATURES.md  RELEASE_POLICY.md  RUST_BENCH.md  RUST_CLIENT.md  RUST_CONFIG.md  RUST_TUNING.md  SELF_HOSTED_RUNNERS.md  SLO.md  WINDOWS_SERVICE.md  WORLD_STATE_2026.md
packaging/homebrew/: secretivex.rb
packaging/systemd/: secretivex-agent.service.tmpl
packaging/windows/: README.md
scripts/: bench_slo_gate.sh  bench_smoke_gate.sh  check_shell.sh  ci_retry.sh  confirm_command_smoke.sh  confirm_prompt_linux.sh  confirm_prompt_osascript.sh  confirm_prompt_windows.ps1  duration_reconnect_smoke.sh  fanout_1000_gate.sh  install_systemd_user_service.sh  install_windows_service.ps1  multi_host_stress_gate.sh  openssh_compat_smoke.sh  pkcs11_smoke.sh  pssh_preflight.sh  regression_gate.sh  repo_sanity.sh  self_hosted_ci_validate.sh  self_hosted_runner_preflight.sh  soak_test.sh  uninstall_systemd_user_service.sh  uninstall_windows_service.ps1  wait_for_agent_ready.sh
