[workspace]
members = [
  "crates/secretive-proto",
  "crates/secretive-core",
  "crates/secretive-agent",
  "crates/secretive-bench",
  "crates/secretive-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bytes = "1.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }
