[package]
name = "secretive-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secretive-core = { path = "../secretive-core" }
secretive-proto = { path = "../secretive-proto" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = []
