[package]
name = "secretive-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secretive-core = { path = "../secretive-core" }
secretive-proto = { path = "../secretive-proto" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
bytes.workspace = true
notify = "6.1"
directories = "5.0"
arc-swap = "1.7"
libc = "0.2"

[features]
default = []
