[package]
name = "secretive-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secretive-proto = { path = "../secretive-proto" }
bytes.workspace = true
tokio.workspace = true
rand = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0"
hex = "0.4"
