[package]
name = "secretive-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secretive-proto = { path = "../secretive-proto" }
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap = "6.1"
arc-swap = "1.7"
ahash = "0.8"
directories = "5.0"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "p521", "rsa"] }
signature = "2.2"
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
zeroize = "1.8"
hex = "0.4"
cryptoki = { version = "0.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3.5"
security-framework-sys = "2.15"

[features]
default = []
pkcs11 = ["cryptoki"]

[dev-dependencies]
tempfile = "3.12"
rand_core = "0.6"
